--- a/ngAO_studyreport/subaru_ngao_SR_en.tex
+++ b/ngAO_studyreport/subaru_ngao_SR_en.tex
@@ -70,8 +70,30 @@ Optics\\Study Report\\(Draft)}
 %%% Executive Summary
 \include{es/es}
 
+%%% Science
+\include{science/sci_intro}
+
+%%% AO Simulation
+\include{simulation/glao/oya}
+\include{simulation/moao/akiyama}
+% galaxy simulation: imaging
+% galaxy simulation: spectroscopy
+
+%%% System Design
+\include{development/design/system_design}
+
+%%% Instruments
+\include{instrument/inst}
+\include{instrument/optics/optcraft}
+\include{instrument/mechanics/mechanics}
+
+%%% Development Plan
+\include{plan/plan}
 
 \end{document}
+
+
+%%%% structure in '2012 Japanese edition of Study Report'
 
 %%% Science
 \include{science/sci_intro}
