add telescope chapter

--- a/ngAO_studyreport/es/es.tex
+++ b/ngAO_studyreport/es/es.tex
@@ -125,32 +125,32 @@ Section~\ref{sec:moao_simulation}. Our major findings are as follows:
        radius smaller than $\sim 3'$.
 
  \item In order to achieve good wavefront error corrections, TTGS should
-       be reasonablly close to the target. Thus the sky coverage to be
-       achieved with MOAO might be fairly similar tto the FoV of the
-       current AO188.
+       be reasonablly close to the target. Consequently, the sky
+       coverage to be achieved with MOAO might be fairly similar to the
+       FoV of the current AO188.
 \end{itemize}
 
 \medskip
 
-このように、GLAOとMOAOについて、すばる望遠鏡に搭載した場合
-に現実的な条件で期待される性能が明らかになった。
-MOAOは、複数の天体に対して高い補償性能を実現できる技術であるが、
-8m級望遠鏡では十分な性能を発揮できるターゲット
-領域が限定されることが分かった。MOAOは30m級望遠鏡で実現できれば非常に強
-力な機能である。一方GLAOは、ELTでは容易に実現できない非常に広い視野での
-良いシーイング条件での観測を可能にするものであり、ELTとの相補
-性という観点でも高い価値をもつと考えられる。よってngAOwgとしては、可変副
-鏡を用いたGLAOがすばる望遠鏡次世代広視野AOの最有力候補であると考えている。
+Through these studies we have understood expected performances of GLAO 
+and MOAO with the Subaru Telescope in reasonably realistic observing
+conditions. MOAO will achieve high Strehl ratios for multiple targets,
+but for the case with 8m-class telescopes their sky area where MOAO can
+perform well will be limited; MOAO should be a strong system if it is
+implemented for 30m-class telescopes.
+GLAO can, on the other hand, provide seeing-improved wide-field images
+which would not be easilly achieved with 30m-class telescopes. It has 
+stronger synergy with 30m-class telescopes. We concluded that GLAO
+is the primary candidate for the Subaru next-generation AO.
 
 \bigskip
 
 \cornersize{0.25}
 
 \Ovalbox{\parbox{0.95\textwidth}{
-\bf すばる望遠鏡の次世代AOシステムとしては、地表層補償光学系(GLAO)
-が最も強力な候補である。
-典型的なシーイング条件で、FWHM $\sim0.2''$ @$K$-bandが10分角以上の広い視
-野で達成される。}}
+\bf GLAO is our primary candidate as Subaru Telescope Next-generation AO
+system. It will achieve FWHM $\sim0.2''$ @$K$-band over the entire
+$>10'$ field of view, under a typical seeing condition.}}
 
 
 \section{New Near-Infrared Instrument}
