--- a/ngAO_studyreport/subaru_ngao_SR_en.tex
+++ b/ngAO_studyreport/subaru_ngao_SR_en.tex
@@ -82,6 +82,9 @@ Optics\\Study Report\\(Draft)}
 %%% System Design
 \include{development/design/system_design}
 
+%%% Telescope
+\include{development/telescope/telescope}
+
 %%% Instruments
 \include{instrument/inst}
 \include{instrument/optics/optcraft}
